...
                            Navigator.push(
                              context,
                              MaterialPageRoute(builder: (context) => Login()),
                            );
                          },
                          child: Text(
                            'Skip',
                            key: Key('Skip'),
                            style: TextStyle(
                              color: Colors.white,
                              fontSize: 20.0,
                            ),
                          ),
                        ),
                      ),
                      // Container that contains the swipeable onboarding objects
                      Container(
                        key: Key('pageContainer'),
                        height: SizeConfig.safeBlockVertical * 80,
                        child: PageView(
                          physics: ClampingScrollPhysics(),
                          controller: _pageController,
                          onPageChanged: (int page) {
                            setState(() {
...
                                        textAlign: TextAlign.center,
                                      ),
                                    ),
                                  ],
                                )),
                            Padding(
                                key: Key('secondPage'),
                                padding: EdgeInsets.symmetric(
                                    vertical: SizeConfig.safeBlockVertical * 3,
                                    horizontal:
                                        SizeConfig.safeBlockHorizontal * 5),
                                child: Column(
                                  crossAxisAlignment: CrossAxisAlignment.start,
...
                                        textAlign: TextAlign.center,
                                      ),
                                    ),
                                  ],
                                )),
                            Padding(
                                key: Key('thirdPage'),
                                padding: EdgeInsets.all(40.0),
                                child: Column(
                                  crossAxisAlignment: CrossAxisAlignment.start,
                                  children: <Widget>[
                                    Center(
                                      child: Image(
...
