...
            },
            icon: FaIcon(FontAwesomeIcons.google),
            color: Color(0xFFEA4335),
            shape:
                RoundedRectangleBorder(borderRadius: BorderRadius.circular(10)),
            textColor: Colors.white,
            label: Text("    Continue with Google", style: loginButtonText, key: Key('googleLogin'),)),
      ),
    );
  }

  Container _buildFacebookLoginButton() {
    return Container(
...
